force-app/main/default/objects/Meter_Log__c/Meter_Log__c.object-meta.xml
<CustomObject>
    <label>Meter Log</label>
    <nameField>
        <displayFormat>ML-{000000}</displayFormat>
        <label>Meter Logs ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>