force-app/main/default/objects/Meter_Log__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter</label>
    <referenceTo>Facility_Schedule__c</referenceTo>
    <relationshipLabel>Meter Logs</relationshipLabel>
    <relationshipName>Meter_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>