force-app/main/default/objects/Meter_Log__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <label>Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>