force-app/main/default/objects/Meter_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genability Calendar ID</fullName>
            </value>
            <value>
                <fullName>Electric tariff name post-LGen</fullName>
            </value>
            <value>
                <fullName>Genability master tariff ID post-LGen</fullName>
            </value>
            <value>
                <fullName>Genability Rate Criteria post-LGen</fullName>
            </value>
            <value>
                <fullName>Gas bill cost Post-LGen</fullName>
                <label>Gas bill cost (Post-LGen)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>